YAMLs/QA/Netpol/aks-lt-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: aks-lt-netpol
  namespace: aks-lt-qa
spec:
  podSelector:
    matchLabels:
      app: api-proxy-pod
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 80
    from:
      - namespaceSelector:
          matchLabels:
            name: aks-lt-qa
      - podSelector:
          matchLabels:
            app: nginx-cache-pod
